--- a/META.yml
+++ b/META.yml
@@ -1,17 +1,26 @@
 --- #YAML:1.0
-name:                Redis
-version:             0.0801
-abstract:            perl binding for Redis database
-license:             ~
-author:              
+name:               Redis
+version:            1.2001
+abstract:           perl binding for Redis database
+author:
     - Dobrica Pavlinusic <dpavlin@rot13.org>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Carp:                          0
-    Data::Dumper:                  0
-    IO::Socket::INET:              0
-    Test::More:                    0
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Carp:              0
+    Data::Dumper:      0
+    Encode:            0
+    IO::Socket::INET:  0
+    Test::More:        0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.55_02
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
