--- a/META.yml
+++ b/META.yml
@@ -1,36 +1,42 @@
---- #YAML:1.0
-name:               Redis
-version:            1.904
-abstract:           perl binding for Redis database
+---
+abstract: 'perl binding for Redis database'
 author:
-    - Pedro Melo <melo@simplicidade.org>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Pedro Melo <melo@simplicidade.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Carp:              0
-    Data::Dumper:      0
-    Encode:            0
-    Exporter:          0
-    Fcntl:             0
-    File::Temp:        0
-    IO::Handle:        0
-    IO::Select:        0
-    IO::Socket::INET:  0
-    IO::String:        0
-    POSIX:             0
-    Test::Deep:        0
-    Test::Exception:   0
-    Test::More:        0.96
-    Tie::Hash:         0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112621'
+license: unknown
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Redis
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Carp: 0
+  Data::Dumper: 0
+  Encode: 0
+  Exporter: 0
+  Fcntl: 0
+  File::Temp: 0
+  IO::Handle: 0
+  IO::Select: 0
+  IO::Socket::INET: 0
+  IO::Socket::UNIX: 0
+  IO::String: 0
+  IPC::Cmd: 0
+  POSIX: 0
+  Scalar::Util: 0
+  Test::Deep: 0
+  Test::Exception: 0
+  Test::Fatal: 0
+  Test::More: 0.96
+  Tie::Hash: 0
+  Time::HiRes: 0
+  Try::Tiny: 0
+version: 1.925
