--- a/META.yml
+++ b/META.yml
@@ -1,42 +1,331 @@
 ---
-abstract: 'perl binding for Redis database'
+abstract: 'Perl binding for Redis database'
 author:
-  - 'Pedro Melo <melo@simplicidade.org>'
+  - 'Pedro Melo <melo@cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: 0
+  Exporter: 0
+  File::Find: 0
+  File::Temp: 0
+  IO::String: 0
+  IPC::Cmd: 0
+  POSIX: 0
+  Test::Deep: 0
+  Test::Exception: 0
+  Test::Fatal: 0
+  Test::More: 0.98
 configure_requires:
-  ExtUtils::MakeMaker: 0
-dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.112621'
-license: unknown
+  ExtUtils::MakeMaker: 6.30
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.300007, CPAN::Meta::Converter version 2.120351'
+license: artistic_2
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Redis
 no_index:
   directory:
-    - t
+    - corpus
+    - examples
     - inc
+    - share
+    - t
+    - xt
+  namespace:
+    - Local
+    - t::lib
+  package:
+    - DB
+provides:
+  Redis:
+    file: lib/Redis.pm
+    version: 1.950
+  Redis::Hash:
+    file: lib/Redis/Hash.pm
+    version: 1.950
+  Redis::List:
+    file: lib/Redis/List.pm
+    version: 1.950
 requires:
   Carp: 0
   Data::Dumper: 0
   Encode: 0
-  Exporter: 0
   Fcntl: 0
-  File::Temp: 0
   IO::Handle: 0
   IO::Select: 0
   IO::Socket::INET: 0
   IO::Socket::UNIX: 0
-  IO::String: 0
-  IPC::Cmd: 0
-  POSIX: 0
   Scalar::Util: 0
-  Test::Deep: 0
-  Test::Exception: 0
-  Test::Fatal: 0
-  Test::More: 0.96
+  Tie::Array: 0
   Tie::Hash: 0
+  Tie::StdHash: 0
   Time::HiRes: 0
   Try::Tiny: 0
-version: 1.926
+  base: 0
+  perl: 5.008
+  strict: 0
+  warnings: 0
+resources:
+  bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Redis
+  homepage: https://github.com/melo/perl-redis
+  repository: https://github.com/melo/perl-redis.git
+version: 1.950
+x_Dist_Zilla:
+  plugins:
+    -
+      class: Dist::Zilla::Plugin::Git::NextVersion
+      name: '@Author::MELO/Git::NextVersion'
+      version: 1.113560
+    -
+      class: Dist::Zilla::Plugin::GenerateFile
+      name: '@Author::MELO/GenerateManifestSkip'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::GatherDir
+      name: '@Author::MELO/GatherDir'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::PruneCruft
+      name: '@Author::MELO/PruneCruft'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::ManifestSkip
+      name: '@Author::MELO/ManifestSkip'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::PruneFiles
+      name: '@Author::MELO/PruneRepoMetaFiles'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::PruneFiles
+      name: '@Author::MELO/PruneDevelCoverDatabase'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::Authority
+      name: '@Author::MELO/Authority'
+      version: 1.006
+    -
+      class: Dist::Zilla::Plugin::NextRelease
+      name: '@Author::MELO/NextRelease'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::OurPkgVersion
+      name: '@Author::MELO/OurPkgVersion'
+      version: 0.003002
+    -
+      class: Dist::Zilla::Plugin::PodWeaver
+      name: '@Author::MELO/PodWeaver'
+      version: 3.101641
+    -
+      class: Dist::Zilla::Plugin::License
+      name: '@Author::MELO/License'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::Readme
+      name: '@Author::MELO/Readme'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::Bugtracker
+      name: '@Author::MELO/Bugtracker'
+      version: 1.111080
+    -
+      class: Dist::Zilla::Plugin::Repository
+      name: '@Author::MELO/Repository'
+      version: 0.18
+    -
+      class: Dist::Zilla::Plugin::GithubMeta
+      name: '@Author::MELO/GithubMeta'
+      version: 0.28
+    -
+      class: Dist::Zilla::Plugin::AutoPrereqs
+      name: '@Author::MELO/AutoPrereqs'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::MetaNoIndex
+      name: '@Author::MELO/MetaNoIndex'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::MetaProvides::Package
+      name: '@Author::MELO/MetaProvides::Package'
+      version: 1.12060502
+    -
+      class: Dist::Zilla::Plugin::MinimumPerl
+      name: '@Author::MELO/MinimumPerl'
+      version: 1.003
+    -
+      class: Dist::Zilla::Plugin::MetaConfig
+      name: '@Author::MELO/MetaConfig'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::MetaYAML
+      name: '@Author::MELO/MetaYAML'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::MetaJSON
+      name: '@Author::MELO/MetaJSON'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::Prereqs
+      config:
+        Dist::Zilla::Plugin::Prereqs:
+          phase: test
+          type: requires
+      name: '@Author::MELO/TestMoreWithSubtests'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::ExecDir
+      name: '@Author::MELO/ExecDir'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::ShareDir
+      name: '@Author::MELO/ShareDir'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::MakeMaker
+      name: '@Author::MELO/MakeMaker'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::Test::Pod::No404s
+      name: '@Author::MELO/Test::Pod::No404s'
+      version: 1.001
+    -
+      class: Dist::Zilla::Plugin::Test::UnusedVars
+      name: '@Author::MELO/@TestingMania/Test::UnusedVars'
+      version: 2.0.1
+    -
+      class: Dist::Zilla::Plugin::Test::Synopsis
+      name: '@Author::MELO/@TestingMania/Test::Synopsis'
+      version: 2.0.1
+    -
+      class: Dist::Zilla::Plugin::Test::Portability
+      name: '@Author::MELO/@TestingMania/Test::Portability'
+      version: 2.0.2
+    -
+      class: Dist::Zilla::Plugin::Test::Version
+      name: '@Author::MELO/@TestingMania/Test::Version'
+      version: 0.001004
+    -
+      class: Dist::Zilla::Plugin::PodCoverageTests
+      name: '@Author::MELO/@TestingMania/PodCoverageTests'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::Test::CPAN::Changes
+      name: '@Author::MELO/@TestingMania/Test::CPAN::Changes'
+      version: 0.005
+    -
+      class: Dist::Zilla::Plugin::Test::CPAN::Meta::JSON
+      name: '@Author::MELO/@TestingMania/Test::CPAN::Meta::JSON'
+      version: 0.003
+    -
+      class: Dist::Zilla::Plugin::Test::DistManifest
+      name: '@Author::MELO/@TestingMania/Test::DistManifest'
+      version: 2.0.1
+    -
+      class: Dist::Zilla::Plugin::MetaTests
+      name: '@Author::MELO/@TestingMania/MetaTests'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::Test::Compile
+      name: '@Author::MELO/@TestingMania/Test::Compile'
+      version: 1.112820
+    -
+      class: Dist::Zilla::Plugin::NoTabsTests
+      name: '@Author::MELO/@TestingMania/NoTabsTests'
+      version: 0.01
+    -
+      class: Dist::Zilla::Plugin::Test::MinimumVersion
+      name: '@Author::MELO/@TestingMania/Test::MinimumVersion'
+      version: 2.0.1
+    -
+      class: Dist::Zilla::Plugin::Test::Pod::LinkCheck
+      name: '@Author::MELO/@TestingMania/Test::Pod::LinkCheck'
+      version: 1.001
+    -
+      class: Dist::Zilla::Plugin::Test::EOL
+      name: '@Author::MELO/@TestingMania/Test::EOL'
+      version: 0.04
+    -
+      class: Dist::Zilla::Plugin::PodSyntaxTests
+      name: '@Author::MELO/@TestingMania/PodSyntaxTests'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::MojibakeTests
+      name: '@Author::MELO/@TestingMania/MojibakeTests'
+      version: 0.3
+    -
+      class: Dist::Zilla::Plugin::Manifest
+      name: '@Author::MELO/Manifest'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::CheckExtraTests
+      name: '@Author::MELO/CheckExtraTests'
+      version: 0.004
+    -
+      class: Dist::Zilla::Plugin::CheckChangesHasContent
+      name: '@Author::MELO/CheckChangesHasContent'
+      version: 0.003
+    -
+      class: Dist::Zilla::Plugin::TestRelease
+      name: '@Author::MELO/TestRelease'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::ConfirmRelease
+      name: '@Author::MELO/ConfirmRelease'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::UploadToCPAN
+      name: '@Author::MELO/UploadToCPAN'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::Git::Check
+      name: '@Author::MELO/@Git/Check'
+      version: 1.113560
+    -
+      class: Dist::Zilla::Plugin::Git::Commit
+      name: '@Author::MELO/@Git/Commit'
+      version: 1.113560
+    -
+      class: Dist::Zilla::Plugin::Git::Tag
+      name: '@Author::MELO/@Git/Tag'
+      version: 1.113560
+    -
+      class: Dist::Zilla::Plugin::Git::Push
+      name: '@Author::MELO/@Git/Push'
+      version: 1.113560
+    -
+      class: Dist::Zilla::Plugin::InstallRelease
+      name: '@Author::MELO/InstallRelease'
+      version: 0.007
+    -
+      class: Dist::Zilla::Plugin::Clean
+      name: '@Author::MELO/Clean'
+      version: 0.02
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':InstallModules'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':IncModules'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':TestFiles'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':ExecFiles'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':ShareFiles'
+      version: 4.300007
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':MainModule'
+      version: 4.300007
+  zilla:
+    class: Dist::Zilla::Dist::Builder
+    config:
+      is_trial: 0
+    version: 4.300007
+x_authority: cpan:MELO
