--- a/META.yml
+++ b/META.yml
@@ -5,316 +5,31 @@ author:
   - 'Damien Krotkine <dams@cpan.org>'
 build_requires:
   Digest::SHA: 0
+  File::Spec: 0
+  IO::Handle: 0
   IO::String: 0
   IPC::Cmd: 0
+  IPC::Open3: 0
+  Module::Build: 0.3601
   Test::Deep: 0
   Test::Fatal: 0
   Test::More: 0.98
+  Test::SharedFork: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.30
+  Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300039, CPAN::Meta::Converter version 2.132830'
 license: artistic_2
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Redis
-no_index:
-  directory:
-    - corpus
-    - examples
-    - inc
-    - share
-    - t
-    - xt
-  namespace:
-    - Local
-    - t::lib
-  package:
-    - DB
-provides:
-  Redis:
-    file: lib/Redis.pm
-    version: 1.962
-  Redis::Hash:
-    file: lib/Redis/Hash.pm
-    version: 1.962
-  Redis::List:
-    file: lib/Redis/List.pm
-    version: 1.962
 requires:
   Try::Tiny: 0
-  perl: v5.8.8
+  perl: 5.008
 resources:
   bugtracker: https://github.com/PerlRedis/perl-redis/issues
-  homepage: http://metacpan.org/release/Redis/
-  repository: git://github.com/PerlRedis/perl-redis.git
-version: 1.962
-x_Dist_Zilla:
-  perl:
-    version: 5.018000
-  plugins:
-    -
-      class: Dist::Zilla::Plugin::GitHub::Meta
-      name: '@Author::MELO/@GitHub/GitHub::Meta'
-      version: 0.35
-    -
-      class: Dist::Zilla::Plugin::GitHub::Update
-      name: '@Author::MELO/@GitHub/GitHub::Update'
-      version: 0.35
-    -
-      class: Dist::Zilla::Plugin::Git::NextVersion
-      name: '@Author::MELO/Git::NextVersion'
-      version: 2.014
-    -
-      class: Dist::Zilla::Plugin::GenerateFile
-      name: '@Author::MELO/GenerateManifestSkip'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::GenerateFile
-      name: '@Author::MELO/GenerateTravisCfg'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::GatherDir
-      name: '@Author::MELO/GatherDir'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::PruneCruft
-      name: '@Author::MELO/PruneCruft'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::ManifestSkip
-      name: '@Author::MELO/ManifestSkip'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::PruneFiles
-      name: '@Author::MELO/PruneRepoMetaFiles'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::Authority
-      name: '@Author::MELO/Authority'
-      version: 1.006
-    -
-      class: Dist::Zilla::Plugin::NextRelease
-      name: '@Author::MELO/NextRelease'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::OurPkgVersion
-      name: '@Author::MELO/OurPkgVersion'
-      version: 0.005000
-    -
-      class: Dist::Zilla::Plugin::PodWeaver
-      name: '@Author::MELO/PodWeaver'
-      version: 3.101641
-    -
-      class: Dist::Zilla::Plugin::License
-      name: '@Author::MELO/License'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::Readme
-      name: '@Author::MELO/Readme'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::AutoPrereqs
-      name: '@Author::MELO/AutoPrereqs'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::MetaNoIndex
-      name: '@Author::MELO/MetaNoIndex'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::MetaProvides::Package
-      name: '@Author::MELO/MetaProvides::Package'
-      version: 1.14000003
-    -
-      class: Dist::Zilla::Plugin::MetaConfig
-      name: '@Author::MELO/MetaConfig'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::MetaYAML
-      name: '@Author::MELO/MetaYAML'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::MetaJSON
-      name: '@Author::MELO/MetaJSON'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::Prereqs
-      config:
-        Dist::Zilla::Plugin::Prereqs:
-          phase: test
-          type: requires
-      name: '@Author::MELO/TestMoreWithSubtests'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::ExecDir
-      name: '@Author::MELO/ExecDir'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::ShareDir
-      name: '@Author::MELO/ShareDir'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::MakeMaker
-      name: '@Author::MELO/MakeMaker'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::Test::Pod::No404s
-      name: '@Author::MELO/Test::Pod::No404s'
-      version: 1.001
-    -
-      class: Dist::Zilla::Plugin::MojibakeTests
-      name: '@Author::MELO/@TestingMania/MojibakeTests'
-      version: 0.5
-    -
-      class: Dist::Zilla::Plugin::Test::DistManifest
-      name: '@Author::MELO/@TestingMania/Test::DistManifest'
-      version: 2.000004
-    -
-      class: Dist::Zilla::Plugin::Test::UnusedVars
-      name: '@Author::MELO/@TestingMania/Test::UnusedVars'
-      version: 2.000005
-    -
-      class: Dist::Zilla::Plugin::Test::EOL
-      name: '@Author::MELO/@TestingMania/Test::EOL'
-      version: 0.08
-    -
-      class: Dist::Zilla::Plugin::Test::Compile
-      config:
-        Dist::Zilla::Plugin::Test::Compile:
-          module_finder:
-            - ':InstallModules'
-          script_finder:
-            - ':ExecFiles'
-      name: '@Author::MELO/@TestingMania/Test::Compile'
-      version: 2.033
-    -
-      class: Dist::Zilla::Plugin::Test::CPAN::Changes
-      name: '@Author::MELO/@TestingMania/Test::CPAN::Changes'
-      version: 0.008
-    -
-      class: Dist::Zilla::Plugin::Test::Version
-      name: '@Author::MELO/@TestingMania/Test::Version'
-      version: 0.002004
-    -
-      class: Dist::Zilla::Plugin::PodCoverageTests
-      name: '@Author::MELO/@TestingMania/PodCoverageTests'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::PodSyntaxTests
-      name: '@Author::MELO/@TestingMania/PodSyntaxTests'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::Test::Pod::LinkCheck
-      name: '@Author::MELO/@TestingMania/Test::Pod::LinkCheck'
-      version: 1.001
-    -
-      class: Dist::Zilla::Plugin::NoTabsTests
-      config:
-        Dist::Zilla::Plugin::Test::NoTabs:
-          module_finder:
-            - ':InstallModules'
-          script_finder:
-            - ':ExecFiles'
-      name: '@Author::MELO/@TestingMania/NoTabsTests'
-      version: 0.04
-    -
-      class: Dist::Zilla::Plugin::Test::CPAN::Meta::JSON
-      name: '@Author::MELO/@TestingMania/Test::CPAN::Meta::JSON'
-      version: 0.003
-    -
-      class: Dist::Zilla::Plugin::MetaTests
-      name: '@Author::MELO/@TestingMania/MetaTests'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::Test::MinimumVersion
-      name: '@Author::MELO/@TestingMania/Test::MinimumVersion'
-      version: 2.000005
-    -
-      class: Dist::Zilla::Plugin::Test::Synopsis
-      name: '@Author::MELO/@TestingMania/Test::Synopsis'
-      version: 2.000004
-    -
-      class: Dist::Zilla::Plugin::Manifest
-      name: '@Author::MELO/Manifest'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::CheckExtraTests
-      name: '@Author::MELO/CheckExtraTests'
-      version: 0.011
-    -
-      class: Dist::Zilla::Plugin::CheckChangesHasContent
-      name: '@Author::MELO/CheckChangesHasContent'
-      version: 0.003
-    -
-      class: Dist::Zilla::Plugin::TestRelease
-      name: '@Author::MELO/TestRelease'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::ConfirmRelease
-      name: '@Author::MELO/ConfirmRelease'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::UploadToCPAN
-      name: '@Author::MELO/UploadToCPAN'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::Git::CommitBuild
-      name: '@Author::MELO/Git::CommitBuild'
-      version: 2.014
-    -
-      class: Dist::Zilla::Plugin::Git::Check
-      name: '@Author::MELO/@Git/Check'
-      version: 2.014
-    -
-      class: Dist::Zilla::Plugin::Git::Commit
-      name: '@Author::MELO/@Git/Commit'
-      version: 2.014
-    -
-      class: Dist::Zilla::Plugin::Git::Tag
-      name: '@Author::MELO/@Git/Tag'
-      version: 2.014
-    -
-      class: Dist::Zilla::Plugin::Git::Push
-      name: '@Author::MELO/@Git/Push'
-      version: 2.014
-    -
-      class: Dist::Zilla::Plugin::InstallRelease
-      name: '@Author::MELO/InstallRelease'
-      version: 0.008
-    -
-      class: Dist::Zilla::Plugin::PrereqsClean
-      name: '@Author::MELO/PrereqsClean'
-      version: 0.92
-    -
-      class: Dist::Zilla::Plugin::Clean
-      name: '@Author::MELO/Clean'
-      version: 0.07
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':InstallModules'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':IncModules'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':TestFiles'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':ExecFiles'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':ShareFiles'
-      version: 4.300035
-    -
-      class: Dist::Zilla::Plugin::FinderCode
-      name: ':MainModule'
-      version: 4.300035
-  zilla:
-    class: Dist::Zilla::Dist::Builder
-    config:
-      is_trial: 0
-    version: 4.300035
-x_authority: cpan:MELO
+  homepage: https://github.com/PerlRedis/perl-redis
+  repository: git://github.com///github.com/PerlRedis/perl-redis.git
+version: 1.963
