Import of DAMS/Redis-1.964 from CPAN.
gitpan-cpan-distribution: Redis
gitpan-cpan-version:      1.964
gitpan-cpan-path:         DAMS/Redis-1.964.tar.gz
gitpan-cpan-author:       DAMS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -19,7 +19,7 @@ configure_requires:
   ExtUtils::MakeMaker: 6.30
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300039, CPAN::Meta::Converter version 2.132830'
+generated_by: 'Dist::Zilla version 5.005, CPAN::Meta::Converter version 2.132830'
 license: artistic_2
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -31,5 +31,5 @@ requires:
 resources:
   bugtracker: https://github.com/PerlRedis/perl-redis/issues
   homepage: https://github.com/PerlRedis/perl-redis
-  repository: git://github.com///github.com/PerlRedis/perl-redis.git
-version: 1.963
+  repository: https://github.com/PerlRedis/perl-redis.git
+version: 1.964
