--- a/META.yml
+++ b/META.yml
@@ -10,26 +10,26 @@ build_requires:
   IO::String: 0
   IPC::Cmd: 0
   IPC::Open3: 0
-  Module::Build: 0.3601
   Test::Deep: 0
   Test::Fatal: 0
   Test::More: 0.98
   Test::SharedFork: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.63_03
-  Module::Build: 0.3601
+  Module::Build::Tiny: 0.030
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.005, CPAN::Meta::Converter version 2.132830'
+generated_by: 'Dist::Zilla version 4.300039, CPAN::Meta::Converter version 2.132830'
 license: artistic_2
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Redis
 requires:
+  IO::Socket::Timeout: 0.22
   Try::Tiny: 0
   perl: 5.008
 resources:
   bugtracker: https://github.com/PerlRedis/perl-redis/issues
   homepage: https://github.com/PerlRedis/perl-redis
   repository: https://github.com/PerlRedis/perl-redis.git
-version: 1.966
+version: 1.967
