--- a/dist.ini
+++ b/dist.ini
@@ -17,6 +17,7 @@ repository.url  = https://github.com/PerlRedis/perl-redis.git
 repository.type = git
 
 [GatherDir]
+exclude_match = redis-server-*
 [PruneCruft]
 [ManifestSkip]
 [MetaYAML]
@@ -25,15 +26,15 @@ repository.type = git
 [ExtraTests]
 [ExecDir]
 [ShareDir]
-[MakeMaker]
-eumm_version = 6.63_03
 [Manifest]
 [TestRelease]
 [ConfirmRelease]
 [UploadToCPAN]
 
 
-[ModuleBuild]
+[ModuleBuildTiny]
+[MakeMaker::Fallback]
+eumm_version = 6.63_03
 [PkgVersion]
 [PodWeaver]
 [Prepender]
@@ -44,14 +45,15 @@ copyright = 1
 [PodCoverageTests]
 [Prereqs]
 Try::Tiny = 0
+IO::Socket::Timeout = 0.22
 [Prereqs / TestRequires]
 Test::SharedFork = 0
-Digest::SHA = 0,
-IO::String = 0,
-IPC::Cmd = 0,
-Test::Deep = 0,
-Test::Fatal = 0,
-Test::More = 0.98,
+Digest::SHA = 0
+IO::String = 0
+IPC::Cmd = 0
+Test::Deep = 0
+Test::Fatal = 0
+Test::More = 0.98
 
 ; -- release
 [NextRelease]
