--- a/dist.ini
+++ b/dist.ini
@@ -18,6 +18,9 @@ repository.type = git
 
 [GatherDir]
 exclude_match = redis-server-*
+exclude_match = t/redis-server-*
+exclude_match = sentinel-*
+exclude_match = t/sentinel-*
 [PruneCruft]
 [ManifestSkip]
 [MetaYAML]
@@ -54,6 +57,7 @@ IPC::Cmd = 0
 Test::Deep = 0
 Test::Fatal = 0
 Test::More = 0.98
+Test::TCP = 0
 
 ; -- release
 [NextRelease]
