--- a/META.yml
+++ b/META.yml
@@ -10,6 +10,8 @@ build_requires:
   IO::String: 0
   IPC::Cmd: 0
   IPC::Open3: 0
+  Pod::Coverage::TrustPod: 0
+  Test::CPAN::Meta: 0
   Test::Deep: 0
   Test::Fatal: 0
   Test::More: 0.98
@@ -19,7 +21,7 @@ configure_requires:
   ExtUtils::MakeMaker: 6.63_03
   Module::Build::Tiny: 0.030
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300039, CPAN::Meta::Converter version 2.132830'
+generated_by: 'Dist::Zilla version 5.005, CPAN::Meta::Converter version 2.132830'
 license: artistic_2
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -33,4 +35,4 @@ resources:
   bugtracker: https://github.com/PerlRedis/perl-redis/issues
   homepage: https://github.com/PerlRedis/perl-redis
   repository: https://github.com/PerlRedis/perl-redis.git
-version: 1.971
+version: 1.972
