Import of DAMS/Redis-1.973_01 from CPAN.
gitpan-cpan-distribution: Redis
gitpan-cpan-version:      1.973_01
gitpan-cpan-path:         DAMS/Redis-1.973_01.tar.gz
gitpan-cpan-author:       DAMS
gitpan-cpan-maturity:     developer

--- a/META.yml
+++ b/META.yml
@@ -16,7 +16,7 @@ build_requires:
   Test::Fatal: 0
   Test::More: 0.98
   Test::SharedFork: 0
-  Test::TCP: 0
+  Test::TCP: 1.19
 configure_requires:
   ExtUtils::MakeMaker: 6.63_03
   Module::Build::Tiny: 0.030
@@ -35,4 +35,4 @@ resources:
   bugtracker: https://github.com/PerlRedis/perl-redis/issues
   homepage: https://github.com/PerlRedis/perl-redis
   repository: https://github.com/PerlRedis/perl-redis.git
-version: 1.972
+version: 1.973_01
