--- a/dist.ini
+++ b/dist.ini
@@ -6,9 +6,11 @@ copyright_holder = Pedro Melo, Damien Krotkine
 copyright_year   = 2013
 
 ; -- version from git
-[Git::NextVersion]
+version = 1.973_01
+;[Git::NextVersion]	
 first_version = 1.962
 
+[MetaJSON]
 [MetaResources]
 homepage        = https://github.com/PerlRedis/perl-redis
 bugtracker.web  = https://github.com/PerlRedis/perl-redis/issues
@@ -57,7 +59,7 @@ IPC::Cmd = 0
 Test::Deep = 0
 Test::Fatal = 0
 Test::More = 0.98
-Test::TCP = 0
+Test::TCP = 1.19
 Test::CPAN::Meta = 0
 Pod::Coverage::TrustPod = 0
 
