Import of DAMS/Redis-1.974 from CPAN.
gitpan-cpan-distribution: Redis
gitpan-cpan-version:      1.974
gitpan-cpan-path:         DAMS/Redis-1.974.tar.gz
gitpan-cpan-author:       DAMS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -35,4 +35,4 @@ resources:
   bugtracker: https://github.com/PerlRedis/perl-redis/issues
   homepage: https://github.com/PerlRedis/perl-redis
   repository: https://github.com/PerlRedis/perl-redis.git
-version: 1.973_04
+version: 1.974
