--- a/dist.ini
+++ b/dist.ini
@@ -6,8 +6,8 @@ copyright_holder = Pedro Melo, Damien Krotkine
 copyright_year   = 2013
 
 ; -- version from git
-version = 1.974
-;[Git::NextVersion]	
+; version = 1.974
+[Git::NextVersion]	
 first_version = 1.962
 
 [MetaJSON]
@@ -60,6 +60,7 @@ Test::Deep = 0
 Test::Fatal = 0
 Test::More = 0.98
 Test::TCP = 1.19
+[Prereqs/DevelopRequires]
 Test::CPAN::Meta = 0
 Pod::Coverage::TrustPod = 0
 
