--- a/META.yml
+++ b/META.yml
@@ -10,6 +10,8 @@ build_requires:
   IO::String: 0
   IPC::Cmd: 0
   IPC::Open3: 0
+  Pod::Coverage::TrustPod: 0
+  Test::CPAN::Meta: 0
   Test::Deep: 0
   Test::Fatal: 0
   Test::More: 0.98
@@ -33,4 +35,4 @@ resources:
   bugtracker: https://github.com/PerlRedis/perl-redis/issues
   homepage: https://github.com/PerlRedis/perl-redis
   repository: https://github.com/PerlRedis/perl-redis.git
-version: 1.975
+version: 1.976
